# ChangeLog for x11-plugins/e_modules-systray
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Mar 2009; evadim <evadim@evadim.ru>
  -x11-plugins/e_modules-systray/ChangeLog:
  initial commit
