@@ -1,3 +1,13 @@
-EBUILD e_modules-systray-9999.ebuild 307 RMD160 756546c302b6c8551540c2ac507bbfd019a14f93 SHA1 722689e004360f0a8c050c848f7962341f6a8df9 SHA256 036879114d8dc53b1f2c7b3670a5e1572eaf5db745ed272d10bbb70ac93ec204
-MISC ChangeLog 233 RMD160 582d3bf24d79ee46579a34711886b9b6778a9934 SHA1 9b3d13454b777c04db990bd97cf0163cab37d7dc SHA256 6ea231232796d619a5aa910c04d6a66e5102d9f6c87b7d4b9de5b625951fcfac
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+EBUILD e_modules-systray-9999.ebuild 330 RMD160 3fe86d6350a889a30548c6efbcdb162ae19ab2c3 SHA1 8a7d22754eb705b894f494f4759e7f2cf9866091 SHA256 06305693ca7ea69232b18aac0c04d6b91fe0312503d26f7b13e846159d338e7e
+MISC ChangeLog 331 RMD160 6de97612985dd30f2bfac3d578c6e399519db996 SHA1 158f839dd301c83716df6f5adf64ac33db88380a SHA256 e08c1bf10dc4ddc31ad3e7b4767cd86a01d75bc66ee49f96d1995cc0a9d389d4
 MISC metadata.xml 221 RMD160 2699c0059639536eb7befa077a27e437569a26ba SHA1 4bef3741184af2e2d984fec094cd0ab39ae2e624 SHA256 1d72b91d3ef79fdff0049c23a645d8595a5fb72ea7e5d5b6fa43cfc18e9a4627
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAknZJnsACgkQ5BmOA85PVLgP7wCgogphW6fMscJcrMzMdG1cCvDI
+x7sAoJ6CAqsC0inzGqEOVPnmsjtzznya
+=UdtJ
+-----END PGP SIGNATURE-----
